# Tungeon

./: .gitignore  README.md  console-app.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: additional-functionality.md  additional-step-effect.md  bug_report.md
.github/workflows/: build_exe.yml  merge_check.yml
docs/: conf.py  modules.rst  tungeon.config.rst  tungeon.config.schema.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  tungeon.config.doctree  tungeon.config.schema.doctree  tungeon.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tungeon.html  (+2 more)
help/: function.md  instruction.md  item.md  profession.md  race.md  rewardset.md  skill.md
help/region/: region.md  region_events.md
ideation/: theorie.md
tests/: test_imports.py
tungeon/config/: game_config.py
tungeon/console_app/: event_dialog.py  fighting_dialog.py  game.py  helpers.py  inventory_dialog.py  learning_dialog.py  round_dialog.py  skill_check_dialog.py
tungeon/data/: company.py  condition.py  hero.py  round_effects.py
tungeon/example_configuration/: items.json  language_package.json  professions.json  races.json  regions.json  rewardsets.json  skills.json
tungeon/example_save_state/: midgards_goetter.json  test2.json  testtruppe.json
tungeon/logics/: config_finder.py  fightingsystem.py  functionality_system.py  hero_actions.py  hero_builder.py  hero_status.py  item_effects.py  itemfinder.py  learningsystem.py  rewardsystem.py  storage_logics.py  ui_connection.py
(+31 files in other folders)
